# AgenticDocs

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
src/: chainlit_app.py  state.py
src/agents/: chapter_crossref.py  chapter_planner.py
src/components/: confirm_package.py  context7_agent.py  docs_discovery.py  docs_scraper.py  enrichment.py  github_agent.py  intent_parser.py  local_cache_inspector.py  quality_judge.py  resumption_inspector.py  web_discovery.py  writer.py
src/core/: settings.py
src/core/llm/: __init__.py  registry.py
src/core/llm/providers/: anthropic.py  openai.py
src/graph/: orchestrator.py  resumption.py  routing.py  scratchpad.py  store.py
src/prompts/: __init__.py  cache.py  confirmation.py  context7.py  crossref.py  enrichment.py  quality.py  writing.py
src/schemas/: __init__.py  discovery.py  quality.py  writing.py
tests/: test_cache_inspector.py  test_chapter_planner.py  test_cross_reference.py  test_resumption.py  test_writer_enhancements.py
ui/: constants.py  event_processor.py  graph_runner.py  rendering.py  session.py  step_formatter.py
